# proinit.v2

./: Cargo.toml  README.md  main
.proinit/: c-templates.json  templates.json
.proinit/buildtool-templates/makefile/: default_c  sdl2_c
src/: README.md  args.rs  interface.rs  lib.rs  main.rs  project.rs  template.rs
