[package]
name = "proinit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
colored = "2"
phf = { version = "0.8.0", features = [ "macros" ] }
serde = { version = "1", features = ["derive"] }
serde_json = " 1.0.59"
